Fix nav layout bug

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -203,7 +203,6 @@ td {
 
 nav ul {
     list-style-type: none;
-    display: inline-block;
 }
 
 /* @end */
